<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    app:behavior_peekHeight="56dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/detailsLbl"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Details"
        android:textColor="@color/toolbarTextColor"
        app:fontFamily="@font/montserrat_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/artistImage"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_user"
        android:tint="@color/toolbarSecondaryTextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsLbl" />


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/artistLbl"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/artist_placeholder"
        android:textColor="@color/toolbarSecondaryTextColor"
        app:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="@+id/artistImage"
        app:layout_constraintStart_toEndOf="@id/artistImage"
        app:layout_constraintTop_toTopOf="@+id/artistImage" />


    <ImageView
        android:id="@+id/locationImage"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_location"
        android:tint="@color/toolbarSecondaryTextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artistImage" />


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/locationLbl"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/location_placeholder"
        android:textColor="@color/toolbarSecondaryTextColor"
        app:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="@+id/locationImage"
        app:layout_constraintStart_toEndOf="@+id/locationImage"
        app:layout_constraintTop_toTopOf="@+id/locationImage" />


    <ImageView
        android:id="@+id/likeImage"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_likes"
        android:tint="@color/toolbarSecondaryTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationImage"
        app:layout_constraintVertical_bias="0.0" />


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/likeLbl"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/likes_placholder"
        android:textColor="@color/toolbarSecondaryTextColor"
        app:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="@+id/likeImage"
        app:layout_constraintStart_toEndOf="@+id/likeImage"
        app:layout_constraintTop_toTopOf="@+id/likeImage" />


</android.support.constraint.ConstraintLayout>